# alien-invasion

./: .gitignore  .pylintrc  Makefile  README.md  alien.py  alien_invasion.py  audio.py  game_stats.py  paths.py  pyproject.toml  scoreboard.py  settings.py  ship.py
alien_invasion/: alien_invasion.py  bullet.py  button.py  game_stats.py  scoreboard.py  ship.py
packaging/: build_wheels.sh  create_venv.sh  find_python.sh
packaging/appimage/: build.sh
packaging/appimage/recipe/: alien_invasion.appdata.xml  alien_invasion.desktop  entrypoint.sh
